IQSS theme: fix spacing b/t teasers in news block on FP

--- a/themes/custom/department/css/department.css
+++ b/themes/custom/department/css/department.css
@@ -223,7 +223,7 @@ p span {
  }
 
 
-#block-boxes-os-news-latest .modified-in-os_news_process_node {margin-bottom:-10px;clear: both;}
+#block-boxes-os-news-latest .modified-in-os_news_process_node {margin-bottom:1px;clear: both;}
 
 
 h5 {
